# FerrisMind

./: .gitignore  Dockerfile  Makefile  README.md
.agent/skills/project-guidelines/: SKILL.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  build_errors.txt
backend/prompts/: CLAUDE.md
backend/prompts/chat/: system.jinja
backend/prompts/intent/: classify.jinja
backend/prompts/source_chat/: system.jinja
backend/prompts/suggest/: from_question.jinja  system.jinja
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: mod.rs  upload.rs  upload_url.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/db/: mod.rs  schema.rs
backend/src/graph/: ask.rs  chat.rs  context.rs  intent.rs  kg_search.rs  mod.rs  router.rs  source.rs  source_chat.rs  suggest.rs  workflow.rs
backend/src/graphql/: guard.rs  mod.rs  mutation.rs  query.rs  types.rs
backend/src/ingest/: chunker.rs  kg_extractor.rs  mod.rs  pipeline.rs  sanitizer.rs  service.rs
backend/src/ingest/parser/: docx.rs  excel.rs  html.rs  legacy.rs  mod.rs  pdf.rs  pptx.rs  text.rs
backend/src/llm/: manager.rs  mod.rs  prompt.rs  provider.rs  rig_client.rs  sse.rs
backend/src/test/: conn_test.rs
front/: .env.example  Dockerfile  Makefile  package-lock.json  package.json
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/editor/: page.tsx
front/src/app/notebook/[id]/: page.tsx
front/src/components/editor/: AddSourceModal.tsx  ChatPanel.tsx  CollapsedLeftSidebar.tsx  CollapsedRightSidebar.tsx  EditorLayout.tsx  LeftSidebar.tsx  LexicalEditor.tsx  NoteEditorPanel.tsx  PanelDetailView.tsx  RightSidebar.tsx  SettingsDropdown.tsx
front/src/components/editor/plugins/: ComponentPickerPlugin.tsx  ToolbarPlugin.tsx
front/src/components/ui/: button.tsx  logo.tsx  markdown-renderer.tsx  modal.tsx
front/src/lib/: ThemeContext.tsx  graphql.ts
front/src/store/: notebookStore.ts
pages/: editor.html  editor_alert.html  editor_right_in_video.html  editor_right_not_empty.html  editor_sidebar.html  home.html
