[package]
name = "open_notebook_lm"
version = "0.1.0"
edition = "2021"
description = "Open-source NotebookLM backend built with Rust, GraphQL, and SurrealDB"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP framework
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }
tower = "0.5.3"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# GraphQL
async-graphql = { version = "7.0.15", features = ["uuid", "chrono", "dataloader"] }
async-graphql-axum = "7.0.15"

# SurrealDB
surrealdb = { version = "3.0.0", features = ["kv-rocksdb", "protocol-ws", "protocol-http"] }
surrealdb-types = "3.0.0"

# Authentication
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1.15", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
anyhow = "1.0.96"
rustls = { version = "0.23", features = ["ring"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# HTTP client (for LLM API calls)
reqwest = { version = "0.12.12", features = ["json", "stream"] }

# Streaming
futures = "0.3.31"
async-stream = "0.3.6"
tokio-stream = "0.1.17"

# LLM Framework (Rig)
rig = { package = "rig-core", version = "0.31.0" }

# SSE
eventsource-stream = "0.2.3"
async-trait = "0.1.87"

# Workflow Management
graph-flow = "0.4.0"

# Templating
tera = "1.20"

# Document Parsing
bytes = "1"
pdf-extract = "0.7"
lopdf = "0.34"
zip = "2"
quick-xml = "0.37"
html2text = "0.13"
tempfile = "3"
mime_guess = "2"
sha2 = "0.10"
percent-encoding = "2"
base64 = "0.22"
calamine = "0.26"

[dev-dependencies]
tokio-test = "0.4.4"
